<resources>
    <string name="app_name">TaskManager</string>
    <string name="try_again">try again</string>
    <string name="name_work">name work</string>
    <string name="description">description</string>
    <string name="save">save</string>
    <string name="description_about_us">This app is designed to help you manage daily tasks and stay focused.
You can create tasks, track your progress, and use a focus timer to boost productivity.
Check out the GitHub repository to see the source code and learn more.</string>
    <string name="more_data">More information</string>
    <string name="ok">ok</string>
    <string name="Focus_min">Focus (Minutes)</string>
    <string name="Break_min">Break (Minutes)</string>
    <string name="cancel">cancel</string>
    <string name="works">works</string>
    <string name="done_work">Finished work</string>
    <string name="no_data">You haven\'t registered anything yet.</string>
    <string name="default_time">00:00</string>
    <string name="idle_time">Idle</string>
    <string name="focus_time">Focus</string>
    <string name="break_time">Break</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="restart">Restart</string>
    <string name="search_title">search...</string>
    <string name="timer">timer</string>
    <string name="az">AZ</string>
    <string name="za">ZA</string>
    <string name="prio_high">Priority High</string>
    <string name="prio_low">Priority Low</string>
    <string name="date_new">Date New </string>
    <string name="date_old">Date Old</string>
    <string name="about_us">about us</string>
    <string name="share">share</string>
    <string name="delete">delete</string>
    <string name="high_priority">high priority</string>
    <string name="medium_priority">medium priority</string>
    <string name="low_priority">low priority</string>
    <string name="no_priority">no priority</string>
    <string name="empty" />
    <string name="delete_all">delete all</string>
    <string name="delete_selected">delete done work</string>
    <string name="text_share_work">share work</string>
</resources>