<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageDialog"
        android:layout_width="match_parent"
        android:scaleType="centerCrop"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true"
        tools:ignore="MissingConstraints"
        android:src="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/textDialog"
        android:layout_width="392dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:textSize="16dp"
        android:text="@string/description_about_us"
        android:textColor="@color/tm_black"
        android:layout_below="@id/imageDialog"
        android:textAlignment="center"
        android:textStyle="bold"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textDialog"
        android:layout_margin="15dp"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/more_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="40dp"
            android:text="@string/more_data"
            android:textColor="@color/tm_black"
            android:textSize="17dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />


        <TextView
            android:id="@+id/ok_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="40dp"
            android:layout_toRightOf="@id/more_text"
            android:text="@string/ok"
            android:textColor="@color/tm_black"
            android:textSize="17dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>
